[gd_scene load_steps=7 format=3 uid="uid://iak4c7s0n4hw"]

[ext_resource type="Script" path="res://Menu.gd" id="1_ntvm1"]
[ext_resource type="Theme" uid="uid://d3buykyq3ertw" path="res://Themes/Default.tres" id="2_n3b82"]
[ext_resource type="PackedScene" uid="uid://b3meracix8wih" path="res://PowerUp_ShootingSpeed.tscn" id="7_exgfq"]
[ext_resource type="PackedScene" uid="uid://v1f43hnd63ys" path="res://PowerUp_Wrap.tscn" id="8_y3imv"]
[ext_resource type="PackedScene" uid="uid://dei3empqdqm4v" path="res://sound_controller.tscn" id="9_425w1"]
[ext_resource type="PackedScene" uid="uid://dot51taso3orw" path="res://PowerUp_Damage.tscn" id="10_sskve"]

[node name="Menu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntvm1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SkillpointsSTR2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(0.886275, 0.164706, 0.172549, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "(┛ಠДಠ)┛彡┻━┻"
horizontal_alignment = 2

[node name="SkillpointsINT2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 0.290196, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "٩(•౪•٩)"

[node name="SkillpointsSTR6" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(0.886275, 0.164706, 0.172549, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "(ಠ ∩ಠ)"
horizontal_alignment = 2

[node name="SkillpointsINT6" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 0.290196, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "(¬_¬)"

[node name="SkillpointsSTR3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(0.886275, 0.164706, 0.172549, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "GET"
horizontal_alignment = 2

[node name="SkillpointsINT3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 0.290196, 1, 1)
layout_mode = 2
size_flags_vertical = 0
text = "RECT"

[node name="SkillpointsSTR4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(0.886275, 0.164706, 0.172549, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "(っ˘з(˘⌣˘ )"
horizontal_alignment = 2

[node name="SkillpointsINT4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 0.290196, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "(′︿‵｡)"

[node name="SkillpointsSTR5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(0.886275, 0.164706, 0.172549, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "'(ᗒᗣᗕ)՞ "
horizontal_alignment = 2

[node name="SkillpointsINT5" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 0.290196, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "┻━┻ ︵ ლ(ಠ益ಠლ)"

[node name="Menu_Separator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Menu_Separator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="SkillpointsSTR" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
self_modulate = Color(0.886275, 0.164706, 0.172549, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Skillpoints:"
horizontal_alignment = 2

[node name="SkillpointsINT" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
self_modulate = Color(1, 0.290196, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "1510950891"

[node name="Play_container" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 0

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/Play_container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "All Pixels are primed
Ready to play!"
theme = ExtResource("2_n3b82")
text = "Play"
icon_alignment = 1

[node name="Options_container" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/Options_container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Discover how limited your power truly is"
theme = ExtResource("2_n3b82")
text = "Options
"
icon_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="HSeparator6" type="HSeparator" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Quit_container" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/Quit_container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Quitting already?
The pixels shed a tear, but they'll be here, waiting for your triumphant comeback"
theme = ExtResource("2_n3b82")
text = "Quit
"
icon_alignment = 1

[node name="HSeparator6" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "UNLOCKED POWERUPS"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Powerup_container" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Powerup_container"]
layout_mode = 2
tooltip_text = "PURPLE POWER
Duration 5 Seconds
1 Hit Anything"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Powerup_container/Control"]
layout_mode = 0
offset_top = -11.0
offset_right = 16.0
offset_bottom = 5.0
rotation = 0.785398
tooltip_text = "Power-Up: DAMAGE
Duration 5 Seconds
Damage x10"

[node name="powerUp_Damage" parent="MarginContainer/VBoxContainer/Powerup_container/Control" instance=ExtResource("10_sskve")]
modulate = Color(0.678431, 0.180392, 0.141176, 0.0392157)

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/Powerup_container"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Powerup_container/Control2"]
layout_mode = 0
offset_top = -11.0
offset_right = 16.0
offset_bottom = 5.0
rotation = 0.785398
tooltip_text = "Power-Up: Shooting Speed
Duration 5 Seconds
Shooting Speed +200%"

[node name="powerUp_ShootingSpeed" parent="MarginContainer/VBoxContainer/Powerup_container/Control2" instance=ExtResource("7_exgfq")]
modulate = Color(0.941176, 0.984314, 0.105882, 0.0392157)

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/Powerup_container"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/Powerup_container/Control3"]
layout_mode = 0
offset_top = -11.0
offset_right = 16.0
offset_bottom = 5.0
rotation = 0.785398
tooltip_text = "POWER UP WRAP
Duration 5 Seconds
Bullet Accuracy +25%"

[node name="powerUp_Wrap" parent="MarginContainer/VBoxContainer/Powerup_container/Control3" instance=ExtResource("8_y3imv")]
modulate = Color(0, 0.447059, 0, 0.0392157)

[node name="Sound_controller" parent="." instance=ExtResource("9_425w1")]

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/Play_container/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/Options_container/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/Quit_container/Quit" to="." method="_on_quit_pressed"]
